Minor changes in node_dht22_oled

--- a/node_dht22_oled/fs/index.html
+++ b/node_dht22_oled/fs/index.html
@@ -1,5 +1,7 @@
 <html>
 <body>
-  <h1>Welcome to the empty project</h1>
+  <h1>Node with OLED Screen and temperature sensor DHT22</h1>
+  <h2>Implemented using Mongoose OS for Thingsboard Platform</h2>
+  <h3>Author: Kike Ramírez - 25/4/2018</h3>
 </body>
 </html>
